@@ -19,12 +19,12 @@
 package com.apitable.organization.service.impl;
 
 import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.lang.Editor;
 import cn.hutool.core.text.CharSequenceUtil;
 import cn.hutool.core.util.BooleanUtil;
 import com.apitable.interfaces.social.facade.SocialServiceFacade;
 import com.apitable.organization.dto.LoadSearchDTO;
 import com.apitable.organization.dto.TeamCteInfo;
-import com.apitable.organization.facade.TeamFacade;
 import com.apitable.organization.mapper.MemberMapper;
 import com.apitable.organization.mapper.TeamMapper;
 import com.apitable.organization.mapper.TeamMemberRelMapper;
@@ -42,17 +42,14 @@ import com.apitable.organization.vo.UnitTeamVo;
 import com.apitable.shared.cache.service.UserSpaceCacheService;
 import com.apitable.shared.cache.service.UserSpaceRemindRecordCacheService;
 import com.apitable.shared.config.properties.LimitProperties;
-import com.apitable.shared.util.DBUtil;
 import com.apitable.shared.util.information.InformationUtil;
-import com.apitable.workspace.service.INodeRoleService;
-import com.baomidou.mybatisplus.extension.toolkit.SqlHelper;
-import jakarta.annotation.Resource;
+import com.apitable.workspace.service.impl.NodeRoleServiceImpl;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
@@ -81,9 +78,6 @@ public class OrganizationServiceImpl implements IOrganizationService {
     private ITeamService iTeamService;
 
     @Resource
-    private TeamFacade teamFacade;
-
-    @Resource
     private UserSpaceCacheService userSpaceCacheService;
 
     @Resource
@@ -99,14 +93,14 @@ public class OrganizationServiceImpl implements IOrganizationService {
     private IRoleService iRoleService;
 
     @Resource
-    private INodeRoleService nodeRoleService;
+    private NodeRoleServiceImpl nodeRoleService;
 
     @Resource
     private SocialServiceFacade socialServiceFacade;
 
     @Override
     public UnitSearchResultVo findLikeUnitName(String spaceId, String likeWord,
-                                               String highlightClassName) {
+        String highlightClassName) {
         log.info("search organizational unit");
         UnitSearchResultVo unitSearchResultVo = new UnitSearchResultVo();
         String all = "*";
@@ -202,8 +196,7 @@ public class OrganizationServiceImpl implements IOrganizationService {
         log.info("query the team's unit info.");
         UnitTeamVo unitTeam = teamMapper.selectUnitTeamVoByTeamId(spaceId, teamId);
         // the number of statistics
-        unitTeam.setMemberCount(
-            SqlHelper.retCount(iTeamService.countMemberCountByParentId(teamId)));
+        unitTeam.setMemberCount(iTeamService.countMemberCountByParentId(teamId));
         // query whether there are sub-organizational units（team or member）
         unitTeam.setHasChildren(iTeamService.checkHasSubUnitByTeamId(spaceId, teamId));
         return unitTeam;
@@ -212,10 +205,10 @@ public class OrganizationServiceImpl implements IOrganizationService {
     @Override
     public List<UnitTeamVo> findUnitTeamVo(String spaceId, List<Long> teamIds) {
         log.info("query the teams' unit info.");
-        List<UnitTeamVo> unitTeamList = iTeamService.getUnitTeamVo(spaceId, teamIds);
-        CollUtil.edit(unitTeamList, unitTeamVo -> {
+        List<UnitTeamVo> unitTeamList = teamMapper.selectUnitTeamVoByTeamIds(spaceId, teamIds);
+        CollUtil.filter(unitTeamList, (Editor<UnitTeamVo>) unitTeamVo -> {
             // the number of statistics
-            long memberCount = iTeamService.countMemberCountByParentId(unitTeamVo.getTeamId());
+            int memberCount = iTeamService.countMemberCountByParentId(unitTeamVo.getTeamId());
             unitTeamVo.setMemberCount(memberCount);
             // query whether sub-departments exist
             List<Long> subTeamIds =
@@ -243,7 +236,12 @@ public class OrganizationServiceImpl implements IOrganizationService {
         if (CollUtil.isEmpty(memberIds)) {
             return new ArrayList<>();
         }
-        return DBUtil.batchSelectByFieldIn(memberIds, memberMapper::selectUnitMemberByMemberIds);
+        List<UnitMemberVo> vos = new ArrayList<>();
+        List<List<Long>> split = CollUtil.split(memberIds, 1000);
+        for (List<Long> ids : split) {
+            vos.addAll(memberMapper.selectUnitMemberByMemberIds(ids));
+        }
+        return vos;
     }
 
     @Override
@@ -259,64 +257,58 @@ public class OrganizationServiceImpl implements IOrganizationService {
 
     @Override
     public List<UnitInfoVo> loadOrSearchInfo(Long userId, String spaceId, LoadSearchDTO params,
-                                             Long sharer) {
+        Long sharer) {
         log.info("load or search unit");
         List<Long> unitIds = this.getLoadedUnitIds(userId, spaceId, params, sharer);
-        if (CollUtil.isEmpty(unitIds)) {
-            return new ArrayList<>();
-        }
         // Specifies the ID of the organizational unit to filter
         if (CollUtil.isNotEmpty(params.getFilterIds())) {
             unitIds.removeAll(params.getFilterIds());
         }
-        return iUnitService.getUnitInfoList(spaceId, unitIds);
+        if (CollUtil.isNotEmpty(unitIds)) {
+            return iUnitService.getUnitInfoList(spaceId, unitIds);
+        }
+        return new ArrayList<>();
     }
 
     private List<Long> getLoadedUnitIds(Long userId, String spaceId, LoadSearchDTO params,
-                                        Long sharer) {
+        Long sharer) {
         if (CollUtil.isNotEmpty(params.getUnitIds())) {
             return params.getUnitIds();
         }
         if (BooleanUtil.isTrue(params.getAll())) {
             return unitMapper.selectIdBySpaceId(spaceId);
         }
+        List<Long> unitIds = new ArrayList<>();
+        List<Long> refIds = new ArrayList<>();
         String likeWord = CharSequenceUtil.trim(params.getKeyword());
         if (CharSequenceUtil.isNotBlank(likeWord)) {
-            List<Long> refIds =
-                this.getSearchUnitRefIds(spaceId, likeWord, params.getSearchEmail());
-            if (refIds.isEmpty()) {
-                return new ArrayList<>();
+            refIds = this.getSearchUnitRefIds(spaceId, likeWord, params.getSearchEmail());
+        } else {
+            if (sharer != null) {
+                // a sharer of node sharing
+                refIds.add(sharer);
+            } else if (userId != null) {
+                // Load the most recently selected members and departments
+                unitIds = userSpaceRemindRecordCacheService.getRemindUnitIds(userId, spaceId);
+                Integer loadCount = limitProperties.getMemberFieldMaxLoadCount();
+                if (CollUtil.isEmpty(unitIds) || unitIds.size() < loadCount) {
+                    // Gets the group members of the latest group that the member joined
+                    Long memberId = userSpaceCacheService.getMemberId(userId, spaceId);
+                    List<Long> teamIds = teamMemberRelMapper.selectTeamIdsByMemberId(memberId);
+                    if (CollUtil.isNotEmpty(teamIds)) {
+                        List<Long> ids =
+                            teamMemberRelMapper.selectMemberIdsByTeamId(
+                                teamIds.get(teamIds.size() - 1));
+                        refIds = CollUtil.sub(CollUtil.reverse(ids), 0, loadCount - unitIds.size());
+                    }
+                }
             }
-            return unitMapper.selectIdsByRefIds(refIds);
         }
-        if (sharer != null) {
-            // a sharer of node sharing
-            return unitMapper.selectIdsByRefIds(Collections.singletonList(sharer));
+        if (CollUtil.isNotEmpty(refIds)) {
+            List<Long> ids = unitMapper.selectIdsByRefIds(refIds);
+            CollUtil.addAllIfNotContains(unitIds, ids);
         }
-        if (userId == null) {
-            return new ArrayList<>();
-        }
-        // Load the most recently selected members and departments
-        List<Long> unitIds = userSpaceRemindRecordCacheService.getRemindUnitIds(userId, spaceId);
-        if (CollUtil.isNotEmpty(unitIds)) {
-            return unitIds;
-        }
-        Integer loadCount = limitProperties.getMemberFieldMaxLoadCount();
-        // Gets the group members of the latest group that the member joined
-        Long memberId = userSpaceCacheService.getMemberId(userId, spaceId);
-        List<Long> teamIds = teamMemberRelMapper.selectTeamIdsByMemberId(memberId);
-        if (CollUtil.isEmpty(teamIds)) {
-            return new ArrayList<>();
-        }
-        Long lastTeamId = teamIds.get(teamIds.size() - 1);
-        List<Long> memberIds = teamMemberRelMapper.selectMemberIdsByTeamId(lastTeamId);
-        if (CollUtil.isEmpty(memberIds)) {
-            return new ArrayList<>();
-        }
-        List<Long> refIds = CollUtil.sub(CollUtil.reverse(memberIds), 0, loadCount);
-        List<Long> unitPrimaryIds = unitMapper.selectIdsByRefIds(refIds);
-        userSpaceRemindRecordCacheService.refresh(userId, spaceId, unitPrimaryIds);
-        return unitPrimaryIds;
+        return unitIds;
     }
 
     private List<Long> getSearchUnitRefIds(String spaceId, String likeWord, Boolean searchEmail) {
@@ -367,7 +359,8 @@ public class OrganizationServiceImpl implements IOrganizationService {
 
     @Override
     public SubUnitResultVo loadMemberFirstTeams(String spaceId, List<Long> teamIds) {
-        List<Long> loadTeamIds = this.loadMemberFirstTeamIds(teamIds);
+        log.info("Load the first department of the organization tree to which a member belongs");
+        List<Long> loadTeamIds = this.loadMemberFirstTeamIds(spaceId, teamIds);
         // get the required load department UnitTeamVo
         List<UnitTeamVo> unitTeamVoList = this.findUnitTeamVo(spaceId, loadTeamIds);
         SubUnitResultVo subUnitResultVo = new SubUnitResultVo();
@@ -376,12 +369,13 @@ public class OrganizationServiceImpl implements IOrganizationService {
     }
 
     @Override
-    public List<Long> loadMemberFirstTeamIds(List<Long> teamIds) {
+    public List<Long> loadMemberFirstTeamIds(String spaceId, List<Long> teamIds) {
+        log.info("Load the first department id of the organization tree to which a member belongs");
         // Member's department's and all sub-departments' id and parentId
-        List<TeamCteInfo> teamsInfo = teamFacade.getAllChildTeam(teamIds);
+        List<TeamCteInfo> teamsInfo = teamMapper.selectChildTreeByTeamIds(spaceId, teamIds);
         // the member's team and all child teams id
         List<Long> teamIdList =
-            teamsInfo.stream().map(TeamCteInfo::getId).toList();
+            teamsInfo.stream().map(TeamCteInfo::getId).collect(Collectors.toList());
         // Filter out the departments that do not need to be loaded
         return teamsInfo.stream()
             .filter(teamInfo -> !teamIdList.contains(teamInfo.getParentId()))
