@@ -20,16 +20,15 @@ package com.apitable.workspace.service.impl;
 
 import static com.apitable.core.constants.RedisConstants.getTemplateQuoteKey;
 import static com.apitable.shared.constants.AssetsPublicConstants.SPACE_PREFIX;
-import static com.apitable.template.enums.TemplateException.NODE_LINK_FOREIGN_NODE;
 
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.lang.Dict;
 import cn.hutool.core.map.MapUtil;
 import cn.hutool.core.util.BooleanUtil;
-import cn.hutool.core.util.NumberUtil;
 import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.json.JSONArray;
 import cn.hutool.json.JSONObject;
 import cn.hutool.json.JSONUtil;
 import com.alibaba.excel.EasyExcel;
@@ -37,10 +36,7 @@ import com.alibaba.excel.ExcelReader;
 import com.alibaba.excel.read.builder.ExcelReaderBuilder;
 import com.alibaba.excel.read.metadata.ReadSheet;
 import com.alibaba.excel.support.ExcelTypeEnum;
-import com.apitable.automation.entity.AutomationRobotEntity;
-import com.apitable.automation.model.AutomationCopyOptions;
-import com.apitable.automation.model.TriggerCopyResultDto;
-import com.apitable.automation.service.IAutomationRobotService;
+import com.apitable.base.enums.ActionException;
 import com.apitable.base.enums.DatabaseException;
 import com.apitable.base.enums.ParameterException;
 import com.apitable.control.infrastructure.ControlRoleDict;
@@ -50,22 +46,20 @@ import com.apitable.control.infrastructure.role.ControlRole;
 import com.apitable.core.exception.BusinessException;
 import com.apitable.core.support.tree.DefaultTreeBuildFactory;
 import com.apitable.core.util.ExceptionUtil;
+import com.apitable.core.util.FileTool;
 import com.apitable.core.util.SpringContextHolder;
 import com.apitable.integration.grpc.BasicResult;
 import com.apitable.integration.grpc.NodeCopyRo;
 import com.apitable.integration.grpc.NodeDeleteRo;
-import com.apitable.interfaces.ai.facade.AiServiceFacade;
-import com.apitable.interfaces.ai.model.AiCreateParam;
-import com.apitable.interfaces.ai.model.AiUpdateParam;
-import com.apitable.interfaces.document.facade.DocumentServiceFacade;
+import com.apitable.interfaces.social.facade.SocialServiceFacade;
 import com.apitable.interfaces.social.model.SocialConnectInfo;
 import com.apitable.organization.dto.MemberDTO;
-import com.apitable.organization.enums.UnitType;
 import com.apitable.organization.mapper.MemberMapper;
 import com.apitable.organization.service.IMemberService;
-import com.apitable.organization.service.IUnitService;
 import com.apitable.shared.cache.bean.LoginUserDto;
+import com.apitable.shared.cache.service.UserSpaceCacheService;
 import com.apitable.shared.component.adapter.MultiDatasourceAdapterTemplate;
+import com.apitable.shared.config.properties.LimitProperties;
 import com.apitable.shared.constants.AuditConstants;
 import com.apitable.shared.constants.FileSuffixConstants;
 import com.apitable.shared.constants.NodeExtraConstants;
@@ -95,7 +89,6 @@ import com.apitable.workspace.dto.NodeCopyEffectDTO;
 import com.apitable.workspace.dto.NodeCopyOptions;
 import com.apitable.workspace.dto.NodeData;
 import com.apitable.workspace.dto.NodeExtraDTO;
-import com.apitable.workspace.dto.NodeStatisticsDTO;
 import com.apitable.workspace.dto.NodeTreeDTO;
 import com.apitable.workspace.dto.UrlNodeInfoDTO;
 import com.apitable.workspace.entity.DatasheetEntity;
@@ -103,24 +96,30 @@ import com.apitable.workspace.entity.DatasheetMetaEntity;
 import com.apitable.workspace.entity.DatasheetRecordEntity;
 import com.apitable.workspace.entity.NodeDescEntity;
 import com.apitable.workspace.entity.NodeEntity;
+import com.apitable.workspace.enums.FieldType;
 import com.apitable.workspace.enums.IdRulePrefixEnum;
 import com.apitable.workspace.enums.NodeException;
 import com.apitable.workspace.enums.NodeType;
 import com.apitable.workspace.enums.PermissionException;
 import com.apitable.workspace.enums.ResourceType;
-import com.apitable.workspace.facade.NodeFacade;
+import com.apitable.workspace.enums.ViewType;
 import com.apitable.workspace.listener.CsvReadListener;
+import com.apitable.workspace.listener.ExcelSheetsDataListener;
 import com.apitable.workspace.listener.MultiSheetReadListener;
 import com.apitable.workspace.mapper.NodeMapper;
 import com.apitable.workspace.mapper.NodeShareSettingMapper;
-import com.apitable.workspace.model.DatasheetCreateObject;
 import com.apitable.workspace.ro.CreateDatasheetRo;
+import com.apitable.workspace.ro.FieldMapRo;
+import com.apitable.workspace.ro.ImportExcelOpRo;
+import com.apitable.workspace.ro.MetaMapRo;
 import com.apitable.workspace.ro.NodeCopyOpRo;
-import com.apitable.workspace.ro.NodeEmbedPageRo;
 import com.apitable.workspace.ro.NodeMoveOpRo;
 import com.apitable.workspace.ro.NodeOpRo;
 import com.apitable.workspace.ro.NodeRelRo;
 import com.apitable.workspace.ro.NodeUpdateOpRo;
+import com.apitable.workspace.ro.RecordDataRo;
+import com.apitable.workspace.ro.RecordMapRo;
+import com.apitable.workspace.ro.ViewMapRo;
 import com.apitable.workspace.service.IDatasheetMetaService;
 import com.apitable.workspace.service.IDatasheetRecordService;
 import com.apitable.workspace.service.IDatasheetService;
@@ -145,8 +144,9 @@ import com.apitable.workspace.vo.ShowcaseVo.NodeExtra;
 import com.baomidou.mybatisplus.core.toolkit.IdWorker;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.baomidou.mybatisplus.extension.toolkit.SqlHelper;
-import jakarta.annotation.Resource;
+import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -158,17 +158,22 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
-import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.csv.CSVFormat;
+import org.apache.commons.csv.CSVRecord;
+import org.apache.poi.EncryptedDocumentException;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.integration.redis.util.RedisLockRegistry;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 /**
  * node service implement.
@@ -178,7 +183,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> implements INodeService {
 
     @Resource
-    private NodeFacade nodeFacade;
+    private NodeMapper nodeMapper;
 
     @Resource
     private INodeDescService iNodeDescService;
@@ -220,10 +225,16 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     private NodeShareSettingMapper nodeShareSettingMapper;
 
     @Resource
+    private LimitProperties limitProperties;
+
+    @Resource
     private IFieldRoleService iFieldRoleService;
 
     @Resource
     private IGrpcClientService grpcClientService;
+
+    @Resource
+    private SocialServiceFacade socialServiceFacade;
 
     @Resource
     private RedisTemplate<String, String> redisTemplate;
@@ -233,6 +244,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Resource
     private ISpaceRoleService iSpaceRoleService;
+
+    @Resource
+    private UserSpaceCacheService userSpaceCacheService;
 
     @Resource
     private MultiDatasourceAdapterTemplate multiDatasourceAdapterTemplate;
@@ -246,65 +260,47 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Resource
     private RedisLockRegistry redisLockRegistry;
 
-    @Resource
-    private AiServiceFacade aiServiceFacade;
-
-    @Resource
-    private IAutomationRobotService iAutomationRobotService;
-
-    @Resource
-    private DocumentServiceFacade documentServiceFacade;
-
-    @Resource
-    private IUnitService iUnitService;
-
     @Override
     public String getRootNodeIdBySpaceId(String spaceId) {
         log.info("The root node ID of the query space [{}]", spaceId);
-        return baseMapper.selectRootNodeIdBySpaceId(spaceId);
+        return nodeMapper.selectRootNodeIdBySpaceId(spaceId);
     }
 
     @Override
     public List<String> getNodeIdBySpaceIdAndType(String spaceId, Integer type) {
         log.info("The ID of the query space [{}] node type [{}]", spaceId, type);
-        return baseMapper.selectNodeIdBySpaceIdAndType(spaceId, type);
+        return nodeMapper.selectNodeIdBySpaceIdAndType(spaceId, type);
     }
 
     @Override
-    public List<String> getNodeIdBySpaceIdAndTypeAndKeyword(String spaceId, Integer type,
-                                                            String keyword) {
-        log.info("The ID of the query space [{}] node types [{}] keyword [{}]", spaceId, type,
-            keyword);
-        return baseMapper.selectNodeIdsBySpaceIdAndTypeAndKeyword(spaceId, type, keyword);
+    public List<String> getNodeIdBySpaceIdAndTypeAndKeyword(String spaceId, Integer type, String keyword) {
+        log.info("The ID of the query space [{}] node types [{}] keyword [{}]", spaceId, type, keyword);
+        return nodeMapper.selectNodeIdsBySpaceIdAndTypeAndKeyword(spaceId, type, keyword);
     }
 
     @Override
     public NodeType getTypeByNodeId(String nodeId) {
-        Integer type = baseMapper.selectNodeTypeByNodeId(nodeId);
+        Integer type = nodeMapper.selectNodeTypeByNodeId(nodeId);
         ExceptionUtil.isNotNull(type, PermissionException.NODE_NOT_EXIST);
         return NodeType.toEnum(type);
     }
 
     @Override
     public NodeEntity getByNodeId(String nodeId) {
-        NodeEntity nodeEntity = baseMapper.selectByNodeId(nodeId);
+        log.info("Query node: {}", nodeId);
+        NodeEntity nodeEntity = nodeMapper.selectByNodeId(nodeId);
         ExceptionUtil.isNotNull(nodeEntity, PermissionException.NODE_NOT_EXIST);
         return nodeEntity;
     }
 
     @Override
-    public List<NodeEntity> getSubNodeList(String parentId) {
-        return baseMapper.selectByParentId(parentId);
-    }
-
-    @Override
     public List<String> getExistNodeIdsBySelf(List<String> nodeIds) {
-        return baseMapper.selectNodeIdByNodeIdIn(nodeIds);
+        return nodeMapper.selectNodeIdByNodeIdIn(nodeIds);
     }
 
     private List<NodeEntity> getByNodeIds(Collection<String> nodeIds) {
         log.info("Batch query node:{}", nodeIds);
-        List<NodeEntity> nodeEntities = baseMapper.selectByNodeIds(nodeIds);
+        List<NodeEntity> nodeEntities = nodeMapper.selectByNodeIds(nodeIds);
         ExceptionUtil.isNotEmpty(nodeEntities, PermissionException.NODE_NOT_EXIST);
         return nodeEntities;
     }
@@ -312,14 +308,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getSpaceIdByNodeId(String nodeId) {
         log.info("The id of the space where the query node is located.");
-        String spaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
+        String spaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
         ExceptionUtil.isNotNull(spaceId, PermissionException.NODE_NOT_EXIST);
         return spaceId;
     }
 
     @Override
     public String getSpaceIdByNodeIds(List<String> nodeIds) {
-        List<String> spaceIds = baseMapper.selectSpaceIdsByNodeIds(nodeIds);
+        List<String> spaceIds = nodeMapper.selectSpaceIdsByNodeIds(nodeIds);
         ExceptionUtil.isTrue(spaceIds.size() == 1, ParameterException.INCORRECT_ARG);
         return spaceIds.get(0);
     }
@@ -327,14 +323,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getSpaceIdByNodeIdIncludeDeleted(String nodeId) {
         log.info("Query the space ID of the node [{}] including deletion", nodeId);
-        return baseMapper.selectSpaceIdByNodeIdIncludeDeleted(nodeId);
+        return nodeMapper.selectSpaceIdByNodeIdIncludeDeleted(nodeId);
     }
 
     @Override
     public Boolean getIsTemplateByNodeIds(List<String> nodeIds) {
         log.info("Query whether all nodes [{}] belong to templates", nodeIds);
-        List<Boolean> result = baseMapper.selectIsTemplateByNodeId(nodeIds);
-        ExceptionUtil.isTrue(!result.isEmpty(), PermissionException.NODE_NOT_EXIST);
+        List<Boolean> result = nodeMapper.selectIsTemplateByNodeId(nodeIds);
+        ExceptionUtil.isTrue(result.size() > 0, PermissionException.NODE_NOT_EXIST);
         ExceptionUtil.isTrue(result.size() == 1, ParameterException.INCORRECT_ARG);
         return result.get(0);
     }
@@ -342,13 +338,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getParentIdByNodeId(String nodeId) {
         log.info("The id of the parent node of the query node [{}]", nodeId);
-        return baseMapper.selectParentIdByNodeId(nodeId);
+        return nodeMapper.selectParentIdByNodeId(nodeId);
     }
 
     @Override
     public String getNodeNameByNodeId(String nodeId) {
         log.info("Query the node name of node [{}]", nodeId);
-        return baseMapper.selectNodeNameByNodeId(nodeId);
+        return nodeMapper.selectNodeNameByNodeId(nodeId);
     }
 
     @Override
@@ -378,19 +374,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<NodeBaseInfoDTO> getParentPathNodes(List<String> nodeIds, boolean includeRootNode) {
-        return nodeFacade.getParentPathNodes(nodeIds, includeRootNode);
-    }
-
-    @Override
-    public List<NodeInfo> getNodeInfo(String spaceId, List<String> nodeIds, Long memberId) {
-        log.info("Node information view of batch query [{}]", nodeIds);
-        return baseMapper.selectNodeInfo(nodeIds, memberId);
+        return nodeMapper.selectAllParentNodeIds(nodeIds, includeRootNode);
     }
 
     @Override
     public List<NodeInfo> getNodeInfoByNodeIds(Collection<String> nodeIds) {
         log.info("Node information view of batch query [{}]", nodeIds);
-        return baseMapper.selectInfoByNodeIds(nodeIds);
+        return nodeMapper.selectInfoByNodeIds(nodeIds);
+    }
+
+    @Override
+    public List<NodeInfo> getNodeInfo(String spaceId, List<String> nodeIds, Long memberId) {
+        log.info("Node information view of batch query [{}]", nodeIds);
+        return nodeMapper.selectNodeInfo(nodeIds, memberId);
     }
 
     @Override
@@ -405,7 +401,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             return new ArrayList<>();
         }
         // Batch query node information
-        List<NodeInfoVo> infos = baseMapper.selectNodeInfoByNodeIds(roleDict.keySet(), memberId);
+        List<NodeInfoVo> infos = nodeMapper.selectNodeInfoByNodeIds(roleDict.keySet(), memberId);
         // Node switches to memory custom sorting
         CollectionUtil.customSequenceSort(infos, NodeInfoVo::getNodeId,
             new ArrayList<>(roleDict.keySet()));
@@ -417,30 +413,16 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String checkNodeIfExist(String spaceId, String nodeId) {
         log.info("Check if the node exists");
-        return checkNodeIfExist(spaceId, nodeId, null);
-    }
-
-    @Override
-    public String checkNodeIfExist(String spaceId, String nodeId, String unitId) {
-        log.info("Check if the node exists");
-        if (nodeId.equals(getRootNodeIdBySpaceId(spaceId))) {
-            return spaceId;
-        }
-        // validate not root node
-        NodeEntity node = baseMapper.selectSpaceIdAndUnitIdByNodeId(nodeId);
-        ExceptionUtil.isNotNull(node, PermissionException.NODE_NOT_EXIST);
-        ExceptionUtil.isFalse(
-            null != unitId && !node.getUnitId().equals(NumberUtil.parseLong(unitId)),
-            PermissionException.NODE_NOT_EXIST);
-        // When the space id is not empty, check whether the space is cross-space.
-        ExceptionUtil.isTrue(StrUtil.isBlank(spaceId) || node.getSpaceId().equals(spaceId),
+        String nodeSpaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
+        ExceptionUtil.isNotNull(nodeSpaceId, PermissionException.NODE_NOT_EXIST);
+        // When the space Id is not empty, check whether the space is cross-space.
+        ExceptionUtil.isTrue(StrUtil.isBlank(spaceId) || nodeSpaceId.equals(spaceId),
             SpaceException.NOT_IN_SPACE);
-        return node.getNodeId();
+        return nodeSpaceId;
     }
 
     @Override
-    public void checkSourceDatasheet(String spaceId, Long memberId, Integer type, String unitId,
-                                     NodeRelRo extra) {
+    public void checkSourceDatasheet(String spaceId, Long memberId, Integer type, NodeRelRo extra) {
         NodeType nodeType = NodeType.toEnum(type);
         switch (nodeType) {
             case FORM:
@@ -448,7 +430,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 ExceptionUtil.isTrue(extra != null && StrUtil.isNotBlank(extra.getDatasheetId())
                     && StrUtil.isNotBlank(extra.getViewId()), ParameterException.INCORRECT_ARG);
                 // Determine whether the datasheet does not exist or is accessed across space.
-                this.checkNodeIfExist(spaceId, extra.getDatasheetId(), unitId);
+                this.checkNodeIfExist(spaceId, extra.getDatasheetId());
                 // Check whether the specified view of the datasheet exists.
                 iDatasheetMetaService.checkViewIfExist(extra.getDatasheetId(), extra.getViewId());
                 // The form requires the editable permission of the source datasheet and the
@@ -468,7 +450,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public Long getMemberIdByUserIdAndNodeId(Long userId, String nodeId) {
-        String spaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
+        String spaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
         if (StrUtil.isBlank(spaceId)) {
             return null;
         }
@@ -482,11 +464,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (StrUtil.isBlank(StrUtil.trim(keyword))) {
             return new ArrayList<>();
         }
-        Long unitId = iUnitService.getUnitIdByRefId(memberId);
-        List<Long> unitIds = CollUtil.list(false, 0L, unitId);
         // fuzzy search results
-        List<String> nodeIds =
-            baseMapper.selectLikeNodeName(spaceId, unitIds, StrUtil.trim(keyword));
+        List<String> nodeIds = nodeMapper.selectLikeNodeName(spaceId, StrUtil.trim(keyword));
         List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds);
         return formatNodeSearchResults(nodeInfos);
     }
@@ -494,32 +473,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public NodeInfoTreeVo getNodeTree(String spaceId, String nodeId, Long memberId, int depth) {
         log.info("Query node tree ");
-        // filter private workspace
-        List<String> nodeIds =
-            this.getNodeIdsInNodeTree(nodeId, depth, false, Collections.singletonList(0L));
+        List<String> nodeIds = this.getNodeIdsInNodeTree(nodeId, depth);
         return this.getNodeInfoTreeByNodeIds(spaceId, memberId, nodeIds);
     }
-
-    @Override
-    public NodeInfoTreeVo getNodeTree(String spaceId, String nodeId, Long memberId, int depth,
-                                      UnitType unitType) {
-        log.info("Query node tree ");
-        List<Long> unitIds = new ArrayList<>();
-        if (UnitType.MEMBER.equals(unitType)) {
-            unitIds.add(iUnitService.getUnitIdByRefId(memberId));
-        }
-        List<String> nodeIds = this.getNodeIdsInNodeTree(nodeId, depth, false, unitIds);
-        if (UnitType.MEMBER.equals(unitType)) {
-            // get space active member count
-            long memberCount = iMemberService.getTotalActiveMemberCountBySpaceId(spaceId);
-            // haven't private node
-            if (memberCount < 2 && nodeIds.size() == 1) {
-                return null;
-            }
-        }
-        return getNodeInfoTreeByNodeIds(spaceId, memberId, nodeIds);
-    }
-
 
     @Override
     public List<NodeShareTree> getSubNodes(String nodeId) {
@@ -528,33 +484,27 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (subNodeIds.isEmpty()) {
             return new ArrayList<>();
         }
-        List<NodeShareTree> shareTrees = baseMapper.selectShareTree(subNodeIds);
-        // node switches to memory custom sort
-        CollectionUtil.customSequenceSort(shareTrees, NodeShareTree::getNodeId, subNodeIds);
-        return shareTrees;
+        return nodeMapper.selectShareTree(subNodeIds);
     }
 
     @Override
     public List<String> getNodeIdsInNodeTree(String nodeId, Integer depth) {
-        return this.getNodeIdsInNodeTree(nodeId, depth, false, new ArrayList<>());
+        return this.getNodeIdsInNodeTree(nodeId, depth, false);
     }
 
     @Override
-    public List<String> getNodeIdsInNodeTree(String nodeId, Integer depth, Boolean isRubbish,
-                                             List<Long> unitIds) {
-        return this.getNodeIdsInNodeTree(Collections.singletonList(nodeId), depth, isRubbish,
-            unitIds);
+    public List<String> getNodeIdsInNodeTree(String nodeId, Integer depth, Boolean isRubbish) {
+        return this.getNodeIdsInNodeTree(Collections.singletonList(nodeId), depth, isRubbish);
     }
 
-    private List<String> getNodeIdsInNodeTree(List<String> nodeIds, Integer depth,
-                                              Boolean isRubbish, List<Long> unitIds) {
+    private List<String> getNodeIdsInNodeTree(List<String> nodeIds, Integer depth, Boolean isRubbish) {
         Set<String> nodeIdSet = new LinkedHashSet<>(nodeIds);
         List<String> parentIds = nodeIds.stream()
             .filter(i -> i.startsWith(IdRulePrefixEnum.FOD.getIdRulePrefixEnum()))
             .collect(Collectors.toList());
         while (!parentIds.isEmpty() && depth != 0) {
             List<NodeTreeDTO> subNode =
-                baseMapper.selectNodeTreeDTOByParentIdIn(parentIds, isRubbish, unitIds);
+                nodeMapper.selectNodeTreeDTOByParentIdIn(parentIds, isRubbish);
             if (subNode.isEmpty()) {
                 break;
             }
@@ -579,56 +529,35 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     private List<String> sortNodeAtSameLevel(List<NodeTreeDTO> sub, NodeType nodeType) {
-        List<NodeTreeDTO> firstNodes = sub.stream()
-            .filter(i -> i.getPreNodeId() == null)
-            .collect(Collectors.toList());
-        Map<String, List<NodeTreeDTO>> preNodeIdToNodesMap = new LinkedHashMap<>();
-        for (NodeTreeDTO node : sub) {
-            String preNodeId = node.getPreNodeId();
-            List<NodeTreeDTO> sufNodes =
-                preNodeIdToNodesMap.computeIfAbsent(preNodeId, k -> new ArrayList<>());
-            sufNodes.add(node);
+        Optional<NodeTreeDTO> first =
+            sub.stream().filter(i -> i.getPreNodeId() == null).findFirst();
+        if (!first.isPresent()) {
+            return sub.stream().map(NodeTreeDTO::getNodeId).collect(Collectors.toList());
         }
+        String preNodeId = first.get().getNodeId();
         List<String> nodeIds = new ArrayList<>();
-        this.sufNodeRecurrence(firstNodes, nodeType, preNodeIdToNodesMap, nodeIds::add);
-        if (nodeIds.size() == sub.size()) {
-            return nodeIds;
+        if (nodeType == null || first.get().getType() == nodeType.getNodeType()) {
+            nodeIds.add(preNodeId);
         }
-        List<String> subNodeIds = sub.stream().map(NodeTreeDTO::getNodeId).toList();
-        sub.stream()
-            .filter(i -> i.getPreNodeId() != null && !subNodeIds.contains(i.getPreNodeId()))
-            .forEach(node -> {
-                List<NodeTreeDTO> suffixNodes = Collections.singletonList(node);
-                this.sufNodeRecurrence(suffixNodes, nodeType, preNodeIdToNodesMap, nodeIds::add);
-            });
-        return nodeIds;
-    }
-
-    private void sufNodeRecurrence(List<NodeTreeDTO> nodes, NodeType nodeType,
-                                   Map<String, List<NodeTreeDTO>> preNodeIdToNodesMap,
-                                   Consumer<String> action) {
-        nodes.stream()
-            .filter(i -> nodeType == null || i.getType() == nodeType.getNodeType())
-            .map(NodeTreeDTO::getNodeId)
-            .forEach(action);
-        for (NodeTreeDTO node : nodes) {
-            String nodeId = node.getNodeId();
-            if (preNodeIdToNodesMap.containsKey(nodeId)) {
-                List<NodeTreeDTO> sufNodes = preNodeIdToNodesMap.get(nodeId);
-                this.sufNodeRecurrence(sufNodes, nodeType, preNodeIdToNodesMap, action);
+        Map<String, NodeTreeDTO> preNodeIdToNodeMap = sub.stream()
+            .collect(Collectors.toMap(NodeTreeDTO::getPreNodeId, i -> i, (k1, k2) -> k2));
+        while (preNodeIdToNodeMap.containsKey(preNodeId)) {
+            NodeTreeDTO nodeTreeDTO = preNodeIdToNodeMap.get(preNodeId);
+            preNodeId = nodeTreeDTO.getNodeId();
+            if (nodeType == null || nodeTreeDTO.getType() == nodeType.getNodeType()) {
+                nodeIds.add(preNodeId);
             }
         }
+        return nodeIds;
     }
 
     @Override
     public List<NodeInfoVo> getChildNodesByNodeId(String spaceId, Long memberId, String nodeId,
-                                                  NodeType nodeType) {
-        List<Long> unitIds = CollUtil.newArrayList(0L, iUnitService.getUnitIdByRefId(memberId));
+        NodeType nodeType) {
         log.info("Query the list of child nodes ");
         // Get a direct child node
         List<NodeTreeDTO> subNode =
-            baseMapper.selectNodeTreeDTOByParentIdIn(Collections.singleton(nodeId), false,
-                unitIds);
+            nodeMapper.selectNodeTreeDTOByParentIdIn(Collections.singleton(nodeId), false);
         if (subNode.isEmpty()) {
             return new ArrayList<>();
         }
@@ -660,11 +589,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String rootNodeId = getRootNodeIdBySpaceId(spaceId);
         parentNodeIds.add(0, rootNodeId);
         parentNodeIds.remove(nodeId);
-        Long unitId = baseMapper.selectUnitIdByNodeId(nodeId);
         // The parent node supplements the tree node load.
         List<NodeTreeDTO> subNode =
-            baseMapper.selectNodeTreeDTOByParentIdIn(parentNodeIds, false,
-                Collections.singletonList(unitId));
+            nodeMapper.selectNodeTreeDTOByParentIdIn(parentNodeIds, false);
         Map<String, List<NodeTreeDTO>> parentIdToSubNodeMap =
             subNode.stream().collect(Collectors.groupingBy(NodeTreeDTO::getParentId));
         List<String> viewNodeIds = new ArrayList<>();
@@ -679,7 +606,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public NodeInfoVo getNodeInfoByNodeId(String spaceId, String nodeId, ControlRole role) {
         log.info("Query node information ");
-        NodeInfoVo nodeInfo = baseMapper.selectNodeInfoByNodeId(nodeId);
+        NodeInfoVo nodeInfo = nodeMapper.selectNodeInfoByNodeId(nodeId);
         SpaceGlobalFeature feature = iSpaceService.getSpaceGlobalFeature(spaceId);
         nodeInfo.setRole(role.getRoleTag());
         nodeInfo.setPermissions(role.permissionToBean(NodePermissionView.class, feature));
@@ -695,18 +622,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         ControlRoleDict roleDict = controlTemplate.fetchNodeTreeNode(memberId, nodeIds);
         ExceptionUtil.isFalse(roleDict.isEmpty(), PermissionException.NODE_ACCESS_DENIED);
         List<NodeInfoTreeVo> treeList =
-            CollUtil.split(roleDict.keySet(), 1000).stream()
-                .reduce(new ArrayList<>(),
-                    (nodes, item) -> {
-                        List<NodeInfoTreeVo> childNodes =
-                            baseMapper.selectNodeInfoTreeByNodeIds(item, memberId);
-                        nodes.addAll(childNodes);
-                        return nodes;
-                    },
-                    (nodes, childNodes) -> {
-                        nodes.addAll(childNodes);
-                        return nodes;
-                    });
+            nodeMapper.selectNodeInfoTreeByNodeIds(roleDict.keySet(), memberId);
         // Node switches to memory custom sort
         CollectionUtil.customSequenceSort(treeList, NodeInfoTreeVo::getNodeId,
             new ArrayList<>(roleDict.keySet()));
@@ -728,50 +644,23 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public String createDatasheetNode(Long userId, String spaceId, DatasheetCreateObject object) {
-        String nodeId = IdUtil.createNodeId(object.getType());
-        NodeEntity nodeEntity = NodeEntity.builder()
-            .spaceId(spaceId)
-            .parentId(object.getParentId())
-            .nodeId(nodeId)
-            .type(object.getType().getNodeType())
-            .nodeName(object.getName())
-            .createdBy(userId)
-            .updatedBy(userId)
-            .build();
-        boolean flag = save(nodeEntity);
-        ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
-        if (object.hasDescription()) {
-            NodeDescEntity descEntity = NodeDescEntity.builder()
-                .id(IdWorker.getId())
-                .nodeId(nodeId)
-                .description(object.getDescription())
-                .build();
-            nodeDescService.insertBatch(Collections.singletonList(descEntity));
-        }
-        iDatasheetService.create(userId, nodeEntity, object.getDatasheetObject());
-        return nodeId;
-    }
-
-    @Override
-    @Transactional(rollbackFor = Exception.class)
     public String createNode(Long userId, String spaceId, NodeOpRo nodeOpRo) {
-        log.info("create children node");
+        log.info("Add node ");
+        // if (nodeOpRo.getType() != NodeType.FOLDER.getNodeType()) {
+        //     // Verify that the number of nodes reaches the upper limit
+        //     iSubscriptionService.checkSheetNums(spaceId, 1);
+        // }
         // The parent id and space id must match.
         // The parent node belongs to this space to prevent cross-space and cross-node operations.
-        this.checkNodeIfExist(spaceId, nodeOpRo.getParentId(), nodeOpRo.getUnitId());
+        this.checkNodeIfExist(spaceId, nodeOpRo.getParentId());
         String name =
             duplicateNameModify(nodeOpRo.getParentId(), nodeOpRo.getType(), nodeOpRo.getNodeName(),
-                null, NumberUtil.parseLong(nodeOpRo.getUnitId()));
-        NodeType nodeType = NodeType.toEnum(nodeOpRo.getType());
-        if (!nodeType.isFolder()) {
-            iSpaceService.checkFileNumOverLimit(spaceId);
-        }
-        String nodeId = IdUtil.createNodeId(nodeType);
+                null);
+        String nodeId = IdUtil.createNodeId(nodeOpRo.getType());
         // If the new node is a file, it corresponds to the creation of a datasheet form.
         this.createFileMeta(userId, spaceId, nodeId, nodeOpRo.getType(), name, nodeOpRo.getExtra());
         // When an empty string is not passed in,
-        // if the pre-node is deleted or not under the parent id, the move fails.
+        // if the pre-node is deleted or not under the parent Id, the move fails.
         String preNodeId = this.verifyPreNodeId(nodeOpRo.getPreNodeId(), nodeOpRo.getParentId());
         NodeEntity nodeEntity = NodeEntity.builder()
             .parentId(nodeOpRo.getParentId())
@@ -779,12 +668,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .preNodeId(preNodeId)
             .nodeName(name)
             .type(nodeOpRo.getType())
-            .extra(JSONUtil.toJsonStr(nodeOpRo.getExtra()))
             .nodeId(nodeId)
-            .unitId(NumberUtil.parseLong(nodeOpRo.getUnitId()))
             .build();
         // Change the front node ID of the next node to the new node ID(A <- C => B <- C)
-        baseMapper.updatePreNodeIdBySelf(nodeId, preNodeId, nodeOpRo.getParentId());
+        nodeMapper.updatePreNodeIdBySelf(nodeId, preNodeId, nodeOpRo.getParentId());
         boolean flag = save(nodeEntity);
         ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
         return nodeEntity.getNodeId();
@@ -821,7 +708,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .extra(dto.getExtra())
             .createdBy(userId)
             .updatedBy(userId)
-            .unitId(dto.getUnitId())
             .build();
 
         boolean flag = save(nodeEntity);
@@ -843,7 +729,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             }
             // Verify that the number of nodes reaches the upper limit
             // iSubscriptionService.checkSheetNums(nodeList.get(0).getSpaceId(), dstCount);
-            boolean flag = SqlHelper.retBool(baseMapper.insertBatch(nodeList));
+            boolean flag = SqlHelper.retBool(nodeMapper.insertBatch(nodeList));
             ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
         }
     }
@@ -865,8 +751,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         this.updateNodeCover(userId, nodeId, opRo.getCover(), nodeEntity.getCover());
 
         // Modify whether to display the history of the record
-        this.updateExtra(nodeId, NodeType.toEnum(nodeEntity.getType()), nodeEntity.getExtra(),
-            opRo.getShowRecordHistory(), opRo.getEmbedPage());
+        if (ObjectUtil.isNotNull(opRo.getShowRecordHistory())
+            && nodeEntity.getType() == NodeType.DATASHEET.getNodeType()) {
+            boolean flag;
+            String newValue = JSONUtil.toJsonStr(Dict.create()
+                .set(NodeExtraConstants.SHOW_RECORD_HISTORY, opRo.getShowRecordHistory()));
+            if (ObjectUtil.isNotNull(nodeEntity.getExtra())) {
+                flag = SqlHelper.retBool(nodeMapper.updateExtraShowRecordHistoryByNodeId(nodeId,
+                    opRo.getShowRecordHistory()));
+            } else {
+                flag = SqlHelper.retBool(nodeMapper.updateExtraByNodeId(nodeId, newValue));
+            }
+            ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
+        }
     }
 
     private void updateNodeName(Long userId, String nodeId, String name, NodeEntity entity) {
@@ -874,23 +771,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             return;
         }
         // Prevent peer directory, duplicate name modification
-        String nodeName = duplicateNameModify(entity.getParentId(), entity.getType(), name, nodeId,
-            entity.getUnitId());
-        boolean flag = SqlHelper.retBool(baseMapper.updateNameByNodeId(nodeId, nodeName));
+        String nodeName = duplicateNameModify(entity.getParentId(), entity.getType(), name, nodeId);
+        boolean flag = SqlHelper.retBool(nodeMapper.updateNameByNodeId(nodeId, nodeName));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
-        // Correspondingly modify the name.
-        switch (NodeType.toEnum(entity.getType())) {
-            case DATASHEET:
-                iDatasheetService.updateDstName(userId, nodeId, nodeName);
-                break;
-            case AI_CHAT_BOT:
-                aiServiceFacade.updateAi(nodeId, AiUpdateParam.builder().name(nodeName).build());
-                break;
-            case AUTOMATION:
-                iAutomationRobotService.updateNameByResourceId(nodeId, nodeName);
-                break;
-            default:
-                break;
+        // The datasheet node, corresponding to the modification.
+        if (entity.getType() == NodeType.DATASHEET.getNodeType()) {
+            iDatasheetService.updateDstName(userId, nodeId, nodeName);
         }
         // publish space audit events
         JSONObject info = JSONUtil.createObj();
@@ -914,7 +800,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (icon.trim().equals(StrUtil.EMPTY)) {
             icon = StrUtil.EMPTY;
         }
-        boolean flag = SqlHelper.retBool(baseMapper.updateIconByNodeId(nodeId, icon));
+        boolean flag = SqlHelper.retBool(nodeMapper.updateIconByNodeId(nodeId, icon));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // publish space audit events
         JSONObject info = JSONUtil.createObj();
@@ -938,7 +824,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if ("null".equalsIgnoreCase(cover) || "undefined".equalsIgnoreCase(cover)) {
             cover = null;
         }
-        boolean flag = SqlHelper.retBool(baseMapper.updateCoverByNodeId(nodeId, cover));
+        boolean flag = SqlHelper.retBool(nodeMapper.updateCoverByNodeId(nodeId, cover));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // the old cover map reduces the number of references
         if (StrUtil.startWith(oldNodeCover, SPACE_PREFIX)) {
@@ -984,15 +870,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String parentId = nodeEntity.getParentId();
         // Nodes that record changes in data (front-end requirements)
         List<String> nodeIds = CollUtil.newArrayList(nodeEntity.getNodeId());
-        if (!nodeEntity.getParentId().equals(opRo.getParentId())
-            || !nodeEntity.getUnitId().equals(NumberUtil.parseLong(opRo.getUnitId()))) {
+        if (!nodeEntity.getParentId().equals(opRo.getParentId())) {
             // move across folders
             parentId = opRo.getParentId();
             // Check whether the new parent node exists and is in the same space
-            this.checkNodeIfExist(nodeEntity.getSpaceId(), parentId, opRo.getUnitId());
+            this.checkNodeIfExist(nodeEntity.getSpaceId(), parentId);
             name =
                 this.duplicateNameModify(parentId, nodeEntity.getType(), nodeEntity.getNodeName(),
-                    null, NumberUtil.parseLong(opRo.getUnitId()));
+                    null);
             // The node is a datasheet, and the name changes corresponding to the modification.
             if (nodeEntity.getType() == NodeType.DATASHEET.getNodeType()
                 && !nodeEntity.getNodeName().equals(name)) {
@@ -1012,36 +897,25 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             action = AuditSpaceAction.SORT_NODE;
         }
         // When an empty string is not passed in,
-        // if the pre-node is deleted or not under the parent id, the move fails.
+        // if the pre-node is deleted or not under the parent Id, the move fails.
         String preNodeId = this.verifyPreNodeId(opRo.getPreNodeId(), parentId);
         // The next node that records the old and new locations
-        List<String> suffixNodeIds = baseMapper.selectNodeIdByPreNodeIdIn(
-            CollUtil.newArrayList(nodeEntity.getNodeId()));
+        List<String> suffixNodeIds = nodeMapper.selectNodeIdByPreNodeIdIn(
+            CollUtil.newArrayList(nodeEntity.getNodeId(), preNodeId));
         nodeIds.addAll(suffixNodeIds);
         Lock lock = redisLockRegistry.obtain(parentId);
         try {
             if (lock.tryLock(2, TimeUnit.MINUTES)) {
                 // Update the front node of the latter node
                 // to the front node of the node (A <- X <- C => A <- C)
-                baseMapper.updatePreNodeIdBySelf(nodeEntity.getPreNodeId(),
+                nodeMapper.updatePreNodeIdBySelf(nodeEntity.getPreNodeId(),
                     nodeEntity.getNodeId(), nodeEntity.getParentId());
                 // Update the sequence relationship of nodes before
                 // and after the move (D <- E => D <- X <- E)
-                String sufNodeId =
-                    baseMapper.selectNodeIdByParentIdAndPreNodeIdAndUnitId(parentId, preNodeId,
-                        nodeEntity.getUnitId());
-                if (sufNodeId != null) {
-                    nodeIds.add(sufNodeId);
-                    baseMapper.updatePreNodeIdByNodeId(nodeEntity.getNodeId(), sufNodeId);
-                }
+                nodeMapper.updatePreNodeIdBySelf(nodeEntity.getNodeId(), preNodeId, parentId);
                 // Update the information of this node (the ID of the previous
                 // node may be updated to null, so update By id is not used)
-                baseMapper.updateInfoByNodeId(nodeEntity.getNodeId(), parentId, preNodeId, name);
-                List<String> subNodeIds = getNodeIdsInNodeTree(nodeEntity.getNodeId(), -1);
-                if (!subNodeIds.isEmpty()) {
-                    baseMapper.updateUnitIdByNodeIds(subNodeIds,
-                        NumberUtil.parseLong(opRo.getUnitId()));
-                }
+                nodeMapper.updateInfoByNodeId(nodeEntity.getNodeId(), parentId, preNodeId, name);
             } else {
                 throw new BusinessException("Frequent operations");
             }
@@ -1084,7 +958,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             new HashSet<>(idList));
         // Obtain the node ID and the corresponding datasheet ID set of the node
         // and its child descendants.
-        List<String> nodeIds = this.getNodeIdsInNodeTree(idList, -1, false, new ArrayList<>());
+        List<String> nodeIds = this.getNodeIdsInNodeTree(idList, -1, false);
         // delete all nodes and child descendants
         if (CollUtil.isNotEmpty(nodeIds)) {
             this.nodeDeleteChangeset(nodeIds);
@@ -1092,7 +966,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             Collection<String> subNodeIds = CollUtil.disjunction(nodeIds, idList);
             if (!subNodeIds.isEmpty()) {
                 boolean flag =
-                    SqlHelper.retBool(baseMapper.updateIsRubbishByNodeIdIn(userId,
+                    SqlHelper.retBool(nodeMapper.updateIsRubbishByNodeIdIn(userId,
                         subNodeIds, true));
                 ExceptionUtil.isTrue(flag, DatabaseException.DELETE_ERROR);
             }
@@ -1100,10 +974,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             nodeShareSettingMapper.disableByNodeIds(nodeIds);
             // delete the spatial attachment resource of the node
             iSpaceAssetService.updateIsDeletedByNodeIds(nodeIds, true);
-            // if node is ai chat bot, auto delete
-            aiServiceFacade.deleteAi(nodeIds);
-            iAutomationRobotService.updateIsDeletedByResourceIds(userId, nodeIds, true);
-            documentServiceFacade.remove(userId, nodeIds);
         }
         for (NodeEntity node : nodes) {
             Lock lock = redisLockRegistry.obtain(node.getParentId());
@@ -1114,12 +984,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     // (Large datasheet processing takes a long time,
                     // node.getPreNodeId() may have changed,
                     // so updatePreNodeIdBySelf is not used directly)
-                    baseMapper.updatePreNodeIdByJoinSelf(nodeId, node.getParentId());
+                    nodeMapper.updatePreNodeIdByJoinSelf(nodeId, node.getParentId());
                     // Save the path of the deletion.
                     // Specify that the deleted node is attached to the parent node -1.
                     String delPath = MapUtil.isNotEmpty(parentIdToPathMap)
                         ? parentIdToPathMap.get(node.getParentId()) : null;
-                    baseMapper.updateDeletedPathByNodeId(userId, nodeId, delPath);
+                    nodeMapper.updateDeletedPathByNodeId(userId, nodeId, delPath);
                     // publish space audit events
                     ClientOriginInfo clientOriginInfo = InformationUtil
                         .getClientOriginInfoInCurrentHttpContext(true, false);
@@ -1154,7 +1024,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         }
         // delete node and datasheet information
         boolean flag =
-            SqlHelper.retBool(baseMapper.updateIsRubbishByNodeIdIn(userId, nodeIds, true));
+            SqlHelper.retBool(nodeMapper.updateIsRubbishByNodeIdIn(userId, nodeIds, true));
         ExceptionUtil.isTrue(flag, DatabaseException.DELETE_ERROR);
         iDatasheetService.updateIsDeletedStatus(userId, nodeIds, true);
         // delete the spatial attachment resource of the node
@@ -1169,7 +1039,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         NodeType nodeType = NodeType.toEnum(copyNode.getType());
         // Restrict replication of root nodes and folders
         ExceptionUtil.isFalse(nodeType.equals(NodeType.ROOT), NodeException.NOT_ALLOW);
-        ExceptionUtil.isFalse(nodeType.equals(NodeType.AI_CHAT_BOT), NodeException.NOT_ALLOW);
         ExceptionUtil.isFalse(nodeType.equals(NodeType.FOLDER),
             NodeException.NODE_COPY_FOLDER_ERROR);
         // Verify that the number of nodes reaches the upper limit
@@ -1180,22 +1049,20 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String nodeName = StringUtil.format(I18nStringsUtil.t("default_file_copy"), param);
 
         String name =
-            duplicateNameModify(copyNode.getParentId(), copyNode.getType(), nodeName, null,
-                copyNode.getUnitId());
+            duplicateNameModify(copyNode.getParentId(), copyNode.getType(), nodeName, null);
         CreateNodeDto createNodeDto = CreateNodeDto.builder()
             .spaceId(copyNode.getSpaceId())
             .parentId(copyNode.getParentId())
             .nodeName(name)
             .type(copyNode.getType())
             .preNodeId(opRo.getNodeId())
-            .newNodeId(IdUtil.createNodeId(nodeType))
+            .newNodeId(IdUtil.createNodeId(copyNode.getType()))
             .icon(copyNode.getIcon())
             .cover(copyNode.getCover())
             .extra(copyNode.getExtra())
-            .unitId(copyNode.getUnitId())
             .build();
         // Update the former node of the latter node to the copied node (A <- B => A <- A' <- B)
-        baseMapper.updatePreNodeIdBySelf(createNodeDto.getNewNodeId(), opRo.getNodeId(),
+        nodeMapper.updatePreNodeIdBySelf(createNodeDto.getNewNodeId(), opRo.getNodeId(),
             copyNode.getParentId());
         // save node
         String copyNodeId = createChildNode(userId, createNodeDto);
@@ -1223,16 +1090,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 iNodeRelService.copy(userId, opRo.getNodeId(), copyNodeId);
                 iResourceMetaService.copyResourceMeta(userId, copyNode.getSpaceId(),
                     opRo.getNodeId(), copyNodeId, ResourceType.MIRROR);
-                return copyEffect;
-            case AUTOMATION:
-                AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().sameSpace(true).removeButtonClickedInput(true)
-                        .overriddenName(name).build();
-                iAutomationRobotService.copy(userId,
-                    Collections.singletonList(opRo.getNodeId()),
-                    automationCopyOptions, newNodeMap);
-                return copyEffect;
-            case CUSTOM_PAGE:
                 return copyEffect;
             default:
                 break;
@@ -1277,7 +1134,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         log.info("Copy node to space ");
         // No parent node is specified, take the root node as the parent node
         if (StrUtil.isBlank(destParentId)) {
-            destParentId = baseMapper.selectRootNodeIdBySpaceId(spaceId);
+            destParentId = nodeMapper.selectRootNodeIdBySpaceId(spaceId);
         }
         Lock lock = redisLockRegistry.obtain(destParentId);
         try {
@@ -1294,33 +1151,36 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     private String saveDumpedNode(Long userId, String spaceId, String destParentId,
-                                  String sourceNodeId, NodeCopyOptions options) {
-        NodeEntity shareNode = baseMapper.selectByNodeId(sourceNodeId);
+        String sourceNodeId, NodeCopyOptions options) {
+        NodeEntity shareNode = nodeMapper.selectByNodeId(sourceNodeId);
         String name = StrUtil.isNotBlank(options.getNodeName())
             ? options.getNodeName() : shareNode.getNodeName();
-        NodeType nodeType = NodeType.toEnum(shareNode.getType());
         String toSaveNodeId = StrUtil.isNotBlank(options.getNodeId())
-            ? options.getNodeId() : IdUtil.createNodeId(nodeType);
+            ? options.getNodeId() : IdUtil.createNodeId(shareNode.getType());
         if (!options.isTemplate()) {
             // check for the same name
-            name = duplicateNameModify(destParentId, shareNode.getType(), name, null,
-                NumberUtil.parseLong(options.getUnitId()));
+            name = duplicateNameModify(destParentId, shareNode.getType(), name, null);
             // update the original first node, and move the position one bit later,
             // that is, the pre-node is the shared node that is transferred.
-            baseMapper.updatePreNodeIdBySelf(toSaveNodeId, null, destParentId);
+            nodeMapper.updatePreNodeIdBySelf(toSaveNodeId, null, destParentId);
         }
 
         // component node id map
-        Map<String, String> newNodeMap = new HashMap<>();
+        Map<String, String> newNodeMap = CollUtil.newHashMap();
         newNodeMap.put(sourceNodeId, toSaveNodeId);
+        NodeType nodeType = NodeType.toEnum(shareNode.getType());
         switch (nodeType) {
             case ROOT:
                 throw new BusinessException(NodeException.NOT_ALLOW);
             case FOLDER:
-                this.copyFolderProcess(userId, spaceId, sourceNodeId,
-                    newNodeMap, options);
+                this.copyFolderProcess(userId, spaceId, shareNode.getSpaceId(),
+                    sourceNodeId, newNodeMap, options);
                 break;
             case DATASHEET:
+                // if (options.isVerifyNodeCount()) {
+                //     // Verify that the number of nodes reaches the upper limit
+                //     // iSubscriptionService.checkSheetNums(spaceId, 1);
+                // }
                 if (options.isFilterPermissionField()) {
                     // Obtain the field that has the permission to enable the column.
                     List<String> permissionFieldIds =
@@ -1339,20 +1199,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             case DASHBOARD:
             case MIRROR:
                 throw new BusinessException(NodeException.SHARE_NODE_STORE_FAIL);
-            case AUTOMATION:
-                AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().removeButtonClickedInput(true)
-                        .overriddenName(name).build();
-                iAutomationRobotService.copy(userId,
-                    Collections.singletonList(sourceNodeId),
-                    automationCopyOptions, newNodeMap);
-
-                break;
             default:
                 break;
         }
         NodeEntity toSaveNode = new NodeEntity();
-        toSaveNode.setId(IdWorker.getId());
         toSaveNode.setNodeId(toSaveNodeId);
         toSaveNode.setNodeName(name);
         toSaveNode.setCover(shareNode.getCover());
@@ -1361,7 +1211,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         toSaveNode.setType(shareNode.getType());
         toSaveNode.setIcon(shareNode.getIcon());
         toSaveNode.setIsTemplate(options.isTemplate());
-        toSaveNode.setUnitId(NumberUtil.parseLong(options.getUnitId()));
         JSONObject extraObj = JSONUtil.parseObj(shareNode.getExtra());
         if (StrUtil.isNotBlank(options.getSourceTemplateId())) {
             extraObj.set(NodeExtraConstants.SOURCE_TEMPLATE_ID, options.getSourceTemplateId());
@@ -1383,7 +1232,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         toSaveNode.setExtra(JSONUtil.toJsonStr(extraObj));
         toSaveNode.setCreatedBy(userId);
         toSaveNode.setUpdatedBy(userId);
-        baseMapper.insert(toSaveNode);
+        this.save(toSaveNode);
         // description of batch replication nodes
         iNodeDescService.copyBatch(newNodeMap);
         // Batch copy of spatial attachment resources referenced by nodes
@@ -1393,7 +1242,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         return toSaveNodeId;
     }
 
-    private void copyFolderProcess(Long userId, String spaceId, String folderId,
+    private void copyFolderProcess(Long userId, String spaceId, String originSpaceId,
+                                   String folderId,
                                    Map<String, String> newNodeMap, NodeCopyOptions options) {
         List<NodeShareTree> subTrees = this.getSubNodes(folderId);
         if (CollUtil.isEmpty(subTrees)) {
@@ -1412,13 +1262,29 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         this.processNodeHasSourceDatasheet(NodeType.MIRROR.getNodeType(), filterNodeIds,
             nodeTypeToNodeIdsMap);
 
+        // Verify that the number of nodes reaches the upper limit
+        // if (options.isVerifyNodeCount()) {
+        //     int subCount;
+        //     if (nodeTypeToNodeIdsMap.containsKey(NodeType.FOLDER.getNodeType())) {
+        //         List<String> fodIds = nodeTypeToNodeIdsMap.get(NodeType.FOLDER.getNodeType())
+        //         .stream().map(NodeShareTree::getNodeId).collect(Collectors.toList());
+        //         // Take out the double union to avoid some folders already in the filtered list.
+        //         subCount = CollUtil.unionDistinct(fodIds, filterNodeIds).size();
+        //     }
+        //     else {
+        //         subCount = filterNodeIds.size();
+        //     }
+        //     if (subTrees.size() > subCount) {
+        //         iSubscriptionService.checkSheetNums(spaceId, subTrees.size() - subCount);
+        //     }
+        // }
+        // Original node-> front node MAP
         Map<String, String> originNodeToPreNodeMap = new HashMap<>(subTrees.size());
         subTrees.forEach(sub -> {
             originNodeToPreNodeMap.put(sub.getNodeId(), sub.getPreNodeId());
             // Supplement the ID mapping relationship between the original node and the new node
             if (!filterNodeIds.contains(sub.getNodeId())) {
-                NodeType nodeType = NodeType.toEnum(sub.getType());
-                newNodeMap.put(sub.getNodeId(), IdUtil.createNodeId(nodeType));
+                newNodeMap.put(sub.getNodeId(), IdUtil.createNodeId(sub.getType()));
             }
         });
         List<NodeEntity> storeEntities = new ArrayList<>();
@@ -1429,13 +1295,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             NodeEntity node = new NodeEntity();
             node.setId(IdWorker.getId());
             node.setSpaceId(spaceId);
-            node.setUnitId(NumberUtil.parseLong(options.getUnitId()));
             node.setParentId(newNodeMap.get(shareTree.getParentId()));
             node.setNodeId(newNodeMap.get(shareTree.getNodeId()));
             node.setNodeName(shareTree.getNodeName());
-            if (StrUtil.isNotBlank(shareTree.getExtra())) {
-                node.setExtra(shareTree.getExtra());
-            }
             if (shareTree.getPreNodeId() != null) {
                 // The original pre-node ID, if it is in the filter column,
                 // recursively until the transferred node is found or ends in the first place.
@@ -1454,10 +1316,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             node.setUpdatedBy(userId);
             storeEntities.add(node);
         }
-        if (storeEntities.isEmpty()) {
+        if (storeEntities.size() == 0) {
             return;
         }
-        boolean flag = SqlHelper.retBool(baseMapper.insertBatch(storeEntities));
+        boolean flag = SqlHelper.retBool(nodeMapper.insertBatch(storeEntities));
         ExceptionUtil.isTrue(flag, NodeException.SHARE_NODE_STORE_FAIL);
         // Copy datasheet processing
         if (nodeTypeToNodeIdsMap.containsKey(NodeType.DATASHEET.getNodeType())) {
@@ -1475,23 +1337,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     });
                 options.setDstPermissionFieldsMap(dstPermissionFieldsMap);
             }
-
-            // Copy automation processing
-            if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
-                List<String> automationNodeIds =
-                    nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
-                        .map(NodeShareTree::getNodeId)
-                        .filter(nodeId -> !filterNodeIds.contains(nodeId))
-                        .collect(Collectors.toList());
-                if (CollUtil.isNotEmpty(automationNodeIds)) {
-                    TriggerCopyResultDto result =
-                        iAutomationRobotService.copy(userId, automationNodeIds,
-                            new AutomationCopyOptions(), newNodeMap);
-                    // use for rewrite button field property
-                    options.setNewTriggerMap(result.getNewTriggerMap());
-                }
-            }
-
             for (NodeShareTree subNode : nodeTypeToNodeIdsMap.get(
                 NodeType.DATASHEET.getNodeType())) {
                 if (filterNodeIds.contains(subNode.getNodeId())) {
@@ -1536,7 +1381,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     ResourceType.MIRROR);
             }
         }
-
     }
 
     /**
@@ -1589,10 +1433,288 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     @Override
+    public String importExcel(Long userId, String spaceId, ImportExcelOpRo opRo)
+        throws IOException {
+        log.info("Import new node ");
+        // Verify that the number of nodes reaches the upper limit
+        // iSubscriptionService.checkSheetNums(spaceId, 1);
+        MultipartFile file = opRo.getFile();
+        ExceptionUtil.isNotNull(file, ActionException.FILE_EMPTY);
+        ExceptionUtil.isNotBlank(file.getOriginalFilename(), ActionException.FILE_EMPTY);
+        ExceptionUtil.isTrue(file.getSize() <= limitProperties.getMaxFileSize(),
+            ActionException.FILE_EXCEED_LIMIT);
+        // fileName
+        String mainName = cn.hutool.core.io.FileUtil.mainName(file.getOriginalFilename());
+        if (StrUtil.isBlank(mainName)) {
+            throw new BusinessException("File name is empty ");
+        }
+        int nodeType = NodeType.DATASHEET.getNodeType();
+        mainName =
+            duplicateNameModify(opRo.getParentId(), nodeType, mainName, null);
+        // file type suffix
+        String fileSuffix = cn.hutool.core.io.FileUtil.extName(file.getOriginalFilename());
+        if (StrUtil.isBlank(fileSuffix)) {
+            throw new BusinessException("File name is empty ");
+        }
+        // When importing a node, the uploaded file is in CSV format.
+        if (fileSuffix.equals(FileSuffixConstants.CSV)) {
+            // identification file code
+            String charset = FileTool.identifyCoding(file.getInputStream());
+            Iterable<CSVRecord> csvRecords = CSVFormat.DEFAULT.withNullString("").parse(
+                new InputStreamReader(file.getInputStream(), charset)
+            );
+            List<List<Object>> readAll = new ArrayList<>();
+            for (CSVRecord csvRecord : csvRecords) {
+                // create csv row to store data per row
+                List<Object> csvRow = new ArrayList<>();
+                for (int i = 0; i < csvRecord.size(); i++) {
+                    String value = csvRecord.get(i);
+                    if (StrUtil.isBlank(value)) {
+                        csvRow.add("");
+                    } else {
+                        csvRow.add(value);
+                    }
+                }
+                readAll.add(csvRow);
+            }
+            return this.processExcel(readAll, opRo.getParentId(), spaceId, userId, mainName);
+        }
+        // When importing a node, the uploaded file is in XLS or XLSX format.
+        if (fileSuffix.equals(FileSuffixConstants.XLS)
+            || fileSuffix.equals(FileSuffixConstants.XLSX)) {
+            ExcelReader excelReader = null;
+            try {
+                // ExcelListener (cannot be handed over to spring container management)
+                ExcelSheetsDataListener sheetsDataListener = new ExcelSheetsDataListener();
+                excelReader =
+                    EasyExcel.read(file.getInputStream(), null, sheetsDataListener).build();
+                List<ReadSheet> readSheets = excelReader.excelExecutor().sheetList();
+                // If there is a WPS hidden table, the removal will not be processed.
+                String wps = "WpsReserved_CellImgList";
+                readSheets.removeIf(readSheet -> wps.equals(readSheet.getSheetName()));
+                // Excel contains only one worksheet
+                if (readSheets.size() == 1) {
+                    List<List<Object>> read =
+                        this.importSingleSheetByEasyExcel(excelReader, sheetsDataListener,
+                            readSheets.get(0));
+                    return this.processExcel(read, opRo.getParentId(), spaceId, userId, mainName);
+                }
+                // Excel contains multiple worksheets
+                Map<String, List<List<Object>>> readAll =
+                    this.importMultipleSheetsByEasyExcel(excelReader, sheetsDataListener,
+                        readSheets);
+                return this.processExcels(readAll, opRo.getParentId(), spaceId, userId, mainName);
+            } catch (EncryptedDocumentException e) {
+                throw new BusinessException(ActionException.FILE_HAS_PASSWORD);
+            } finally {
+                if (Objects.nonNull(excelReader)) {
+                    excelReader.finish();
+                }
+            }
+        } else {
+            throw new BusinessException(ActionException.FILE_ERROR_FORMAT);
+        }
+    }
+
+    @Override
+    public Map<String, List<List<Object>>> importMultipleSheetsByEasyExcel(ExcelReader excelReader,
+                                                                           ExcelSheetsDataListener sheetsDataListener,
+                                                                           List<ReadSheet> readSheets) {
+        Map<String, List<List<Object>>> readAll = new LinkedHashMap<>(readSheets.size());
+        // inverse Excel Sheet
+        Collections.reverse(readSheets);
+        for (ReadSheet readSheet : readSheets) {
+            // read by worksheet
+            excelReader.read(readSheet);
+            // read header
+            List<Object> sheetHeader = sheetsDataListener.getSheetHeader();
+            // read table data
+            List<List<Object>> sheetsData = sheetsDataListener.getSheetData();
+            List<List<Object>> assembleData = new ArrayList<>();
+            // assemble header and table data
+            if (CollectionUtil.isNotEmpty(sheetHeader)) {
+                assembleData.add(sheetHeader);
+            }
+            if (CollectionUtil.isNotEmpty(sheetsData)) {
+                assembleData.addAll(sheetsData);
+            }
+            readAll.put(readSheet.getSheetName(), assembleData);
+            // Empty the header and table objects in the listener and read the next worksheet.
+            sheetsDataListener.setSheetHeader(new ArrayList<>());
+            sheetsDataListener.setSheetData(new ArrayList<>());
+        }
+        return readAll;
+    }
+
+    @Override
+    public List<List<Object>> importSingleSheetByEasyExcel(ExcelReader excelReader,
+                                                           ExcelSheetsDataListener sheetsDataListener,
+                                                           ReadSheet readSheet) {
+        excelReader.read(readSheet);
+        List<Object> sheetHeader = sheetsDataListener.getSheetHeader();
+        List<List<Object>> sheetData = sheetsDataListener.getSheetData();
+        List<List<Object>> assembleData = new ArrayList<>();
+        if (CollectionUtil.isNotEmpty(sheetHeader)) {
+            assembleData.add(sheetHeader);
+        }
+        if (CollectionUtil.isNotEmpty(sheetData)) {
+            assembleData.addAll(sheetData);
+        }
+        return assembleData;
+    }
+
+    @Override
     public void updateNodeBanStatus(String nodeId, Integer status) {
         log.info("Ban or unban nodes ");
-        boolean flag = SqlHelper.retBool(baseMapper.updateNodeBanStatus(nodeId, status));
+        boolean flag = SqlHelper.retBool(nodeMapper.updateNodeBanStatus(nodeId, status));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
+    }
+
+    /**
+     * processing excel data.
+     */
+    private String processExcel(List<List<Object>> readAll, String parentId, String spaceId,
+                                Long userId, String name) {
+        Long memberId = userSpaceCacheService.getMemberId(userId, spaceId);
+        checkEnableOperateNodeBySpaceFeature(memberId, spaceId, parentId);
+        // long maxRowLimit = iSubscriptionService.getPlanMaxRows(spaceId);
+        // ExceptionUtil.isTrue(readAll != null && readAll.size() <= maxRowLimit + 1,
+        // SubscribeFunctionException.ROW_LIMIT);
+        // If the table is empty, create an initialization table
+        if (readAll.size() == 0) {
+            return this.createNode(userId, spaceId, NodeOpRo.builder()
+                .type(NodeType.DATASHEET.getNodeType())
+                .parentId(parentId)
+                .nodeName(name)
+                .build());
+        } else {
+            boolean first = true;
+            JSONObject recordMap = JSONUtil.createObj();
+            JSONObject fieldMap = JSONUtil.createObj();
+            ViewMapRo viewMapRo = new ViewMapRo();
+            JSONArray columns = JSONUtil.createArray();
+            JSONArray rows = JSONUtil.createArray();
+            List<String> fieldIds = null;
+            List<String> fldNameList = new ArrayList<>();
+            // Traverse row, first row as field attribute
+            for (List<Object> list : readAll) {
+                // Handling Empty Character Columns at the End Caused by excel Format Problems
+                if (ObjectUtil.isNull(CollUtil.getLast(list)) || CollUtil.getLast(list) == "") {
+                    int i;
+                    for (i = list.size() - 1; i >= 0; i--) {
+                        if (ObjectUtil.isNotNull(list.get(i)) && list.get(i) != "") {
+                            break;
+                        }
+                    }
+                    list = CollUtil.sub(list, 0, i + 1);
+                }
+                ExceptionUtil.isTrue(list.size() <= limitProperties.getMaxColumnCount(),
+                    ActionException.COLUMN_EXCEED_LIMIT);
+                if (first) {
+                    fieldIds = new ArrayList<>(list.size());
+                    first = false;
+                    int i = 1;
+                    for (Object fieldName : list) {
+                        this.addField(fieldIds, columns, fieldMap,
+                            null == fieldName ? null : fieldName.toString(), i, fldNameList);
+                        i++;
+                    }
+                    viewMapRo = ViewMapRo.builder()
+                        .id(IdUtil.createViewId())
+                        .name(I18nStringsUtil.t("default_view"))
+                        .type(ViewType.GRID.getType())
+                        .columns(columns)
+                        .frozenColumnCount(1)
+                        .build();
+                    if (readAll.size() == 1) {
+                        // Only one line acts as a field condition and fills a blank line.
+                        this.addRecord(recordMap, rows, null, null, null, null, null, fldNameList);
+                    }
+                } else {
+                    // processing record
+                    this.addRecord(recordMap, rows, list, fieldIds, columns, fieldMap, viewMapRo,
+                        fldNameList);
+                }
+            }
+            viewMapRo.setRows(rows);
+            JSONArray views = JSONUtil.createArray();
+            views.add(viewMapRo);
+            MetaMapRo metaMapRo = MetaMapRo.builder().fieldMap(fieldMap).views(views).build();
+            String nodeId = IdUtil.createDstId();
+            // Change the pre-node ID of the original first node to the imported node ID
+            nodeMapper.updatePreNodeIdBySelf(nodeId, null, parentId);
+            // create node datasheet
+            this.createChildNode(userId, CreateNodeDto.builder()
+                .spaceId(spaceId)
+                .parentId(parentId)
+                .nodeName(name)
+                .newNodeId(nodeId)
+                .type(NodeType.DATASHEET.getNodeType()).build());
+            iDatasheetService.create(userId, spaceId, nodeId, name, metaMapRo, recordMap);
+            return nodeId;
+        }
+    }
+
+    /**
+     * add records.
+     */
+    private void addRecord(JSONObject recordMap, JSONArray rows, List<Object> list,
+                           List<String> fieldIds, JSONArray columns, JSONObject fieldMap,
+                           ViewMapRo viewMapRo, List<String> fldNameList) {
+        String recordId = IdUtil.createRecordId();
+        JSONObject recordJson = JSONUtil.createObj();
+        recordJson.set("recordId", recordId);
+        rows.add(recordJson);
+        JSONObject data = JSONUtil.createObj();
+        if (CollUtil.isNotEmpty(list)) {
+            int i = 0;
+            for (Object text : list) {
+                if (i >= fieldIds.size()) {
+                    // The number of columns exceeds the first row list, fill the field
+                    this.addField(fieldIds, columns, fieldMap, null, i + 1, fldNameList);
+                    viewMapRo.setColumns(columns);
+                }
+                if (ObjectUtil.isNotNull(text) && text != "") {
+                    JSONArray filedArray = JSONUtil.createArray();
+                    filedArray.add(RecordDataRo.builder().text(text.toString())
+                        .type(FieldType.TEXT.getFieldType()).build());
+                    data.set(fieldIds.get(i), filedArray);
+                }
+                i++;
+            }
+        }
+        recordMap.set(recordId, RecordMapRo.builder().id(recordId).data(data).build());
+    }
+
+    /**
+     * add field.
+     */
+    private void addField(List<String> fieldIds, JSONArray columns, JSONObject fieldMap,
+                          String fieldName, int i, List<String> fldNameList) {
+        String fieldId = IdUtil.createFieldId();
+        fieldIds.add(fieldId);
+        JSONObject fieldJson = JSONUtil.createObj();
+        fieldJson.set("fieldId", fieldId);
+        if (i == 1) {
+            // Add the total number of statistical records in the first column
+            fieldJson.set("statType", 1);
+        }
+        columns.add(fieldJson);
+        if (StrUtil.isBlank(fieldName)) {
+            fieldName = "Field " + i;
+        }
+        // ensure that the field name is unique
+        int j = 2;
+        String name = fieldName;
+        while (fldNameList.contains(fieldName)) {
+            fieldName = name.concat(" " + j);
+            j++;
+        }
+        fldNameList.add(fieldName);
+        fieldMap.set(fieldId, FieldMapRo.builder()
+            .id(fieldId)
+            .name(fieldName)
+            .type(FieldType.TEXT.getFieldType()).build());
     }
 
     /**
@@ -1600,8 +1722,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
      */
     @Override
     public String duplicateNameModify(String parentId, int nodeType, String nodeName,
-                                      String nodeId, Long unitId) {
-        List<String> nameList = baseMapper.selectNameList(parentId, nodeType, nodeId, unitId);
+                                      String nodeId) {
+        List<String> nameList = nodeMapper.selectNameList(parentId, nodeType, nodeId);
         int i = 2;
         String name = nodeName;
         while (nameList.contains(name)) {
@@ -1613,7 +1735,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<String> checkSubNodePermission(Long memberId, String nodeId, ControlRole role) {
-        boolean hasChildren = baseMapper.selectHasChildren(nodeId);
+        boolean hasChildren = nodeMapper.selectHasChildren(nodeId);
         if (!hasChildren) {
             return null;
         }
@@ -1626,7 +1748,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         List<String> filterNodeIds = roleDict.entrySet().stream()
             .filter(entry -> entry.getValue().isGreaterThanOrEqualTo(role))
-            .map(Map.Entry::getKey).toList();
+            .map(Map.Entry::getKey).collect(Collectors.toList());
         ExceptionUtil.isTrue(subNodeIds.size() == filterNodeIds.size(),
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         return subNodeIds;
@@ -1708,23 +1830,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 iResourceMetaService.create(userId, nodeId, ResourceType.MIRROR.getValue(),
                     JSONUtil.createObj().toString());
                 break;
-            case AI_CHAT_BOT:
-                iSpaceService.checkChatBotNumsOverLimit(spaceId);
-                aiServiceFacade.createAi(AiCreateParam.builder()
-                    .spaceId(spaceId)
-                    .aiId(nodeId)
-                    .aiName(name)
-                    .build()
-                );
-                break;
-            case AUTOMATION:
-                iAutomationRobotService.create(AutomationRobotEntity.builder()
-                    .resourceId(nodeId)
-                    .robotId(IdUtil.createAutomationRobotId())
-                    .name(name)
-                    .createdBy(userId)
-                    .build());
-                break;
             default:
                 break;
         }
@@ -1737,17 +1842,39 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (StrUtil.isBlank(preNodeId)) {
             return null;
         } else {
-            String id = baseMapper.selectParentIdByNodeId(preNodeId);
+            String id = nodeMapper.selectParentIdByNodeId(preNodeId);
             ExceptionUtil.isTrue(parentId.equals(id), PermissionException.NODE_ACCESS_DENIED);
             return preNodeId;
         }
     }
 
     /**
+     * operate multiple excel sheet.
+     *
+     * @param readAll  all records
+     * @param parentId parent node id
+     * @param spaceId  space id
+     * @param userId   user id
+     * @param name     node name
+     * @return node id
+     */
+    private String processExcels(Map<String, List<List<Object>>> readAll, String parentId,
+                                 String spaceId, Long userId, String name) {
+        String nodeId = this.createNode(userId, spaceId, NodeOpRo.builder()
+            .type(NodeType.FOLDER.getNodeType())
+            .parentId(parentId)
+            .nodeName(name)
+            .build());
+        readAll.forEach(
+            (sheetName, read) -> processExcel(read, nodeId, spaceId, userId, sheetName));
+        return nodeId;
+    }
+
+    /**
      * Get the superior path, split by "/", do not retain the root node.
      */
     private Map<String, String> getSuperiorPathByParentIds(List<String> parentIds) {
-        // gets all parent nodes other than the root node
+        // gets all parent nodes other than the non root node
         List<NodeBaseInfoDTO> parentNodes = this.getParentPathNodes(parentIds, false);
         if (CollUtil.isEmpty(parentNodes)) {
             return null;
@@ -1780,35 +1907,53 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public String parseExcel(Long userId, String uuid, String spaceId,
-                             Long memberId, String parentNodeId, Long unitId, String viewName,
-                             String fileName, String fileSuffix, InputStream inputStream) {
+        Long memberId, String parentNodeId, String viewName, String fileName,
+        String fileSuffix, InputStream inputStream) {
+        ExcelReader excelReader = null;
         MultiSheetReadListener readListener =
             new MultiSheetReadListener(this, userId, uuid, spaceId, memberId,
-                parentNodeId, unitId, viewName, fileName);
+                parentNodeId, viewName, fileName);
+        ExcelReaderBuilder readerBuilder;
         ExcelTypeEnum excelType = FileSuffixConstants.XLS.equals(fileSuffix)
             ? ExcelTypeEnum.XLS : ExcelTypeEnum.XLSX;
-        ExcelReaderBuilder readerBuilder = EasyExcel.read(inputStream)
-            .excelType(excelType)
-            .ignoreEmptyRow(false).autoTrim(false);
-        try (ExcelReader excelReader = readerBuilder.registerReadListener(readListener).build()) {
+        try {
+            readerBuilder = EasyExcel.read(inputStream)
+                .excelType(excelType)
+                .ignoreEmptyRow(false).autoTrim(false);
+            excelReader = readerBuilder.registerReadListener(readListener).build();
             List<ReadSheet> readSheets = excelReader.excelExecutor().sheetList();
             excelReader.read(readSheets);
             return readListener.getRetNodeData().getNodeId();
+        } finally {
+            if (excelReader != null) {
+                // Don't forget to close it here.
+                // Temporary files will be created when reading, and the disk will collapse.
+                excelReader.finish();
+            }
         }
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public String parseCsv(Long userId, String uuid, String spaceId, Long memberId,
-                           String parentNodeId, Long unitId, String viewName, String fileName,
-                           InputStream inputStream) {
+        String parentNodeId, String viewName, String fileName, InputStream inputStream) {
+        ExcelReader excelReader = null;
         CsvReadListener readListener =
             new CsvReadListener(this, userId, uuid, spaceId, memberId,
-                parentNodeId, unitId, viewName, fileName);
-        try (ExcelReader excelReader = EasyExcel.read(inputStream).excelType(ExcelTypeEnum.CSV)
-            .registerReadListener(readListener).build()) {
+                parentNodeId, viewName, fileName);
+        try {
+            excelReader = EasyExcel.read(inputStream)
+                .excelType(ExcelTypeEnum.CSV)
+                .registerReadListener(readListener)
+                .build();
             excelReader.readAll();
             return readListener.getRetNodeId();
+        } finally {
+            if (excelReader != null) {
+                // Don't forget to close it here.
+                // Temporary files will be created when reading, and the disk will collapse.
+                excelReader.finish();
+            }
         }
     }
 
@@ -1819,9 +1964,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                                      List<DatasheetMetaEntity> metaEntities,
                                      List<DatasheetRecordEntity> recordEntities) {
 
-        baseMapper.updatePreNodeIdBySelf(data.getNodeId(), null, data.getParentId());
+        nodeMapper.updatePreNodeIdBySelf(data.getNodeId(), null, data.getParentId());
 
-        baseMapper.insertBatch(nodeEntities);
+        nodeMapper.insertBatch(nodeEntities);
 
         iDatasheetService.batchSave(datasheetEntities);
 
@@ -1842,13 +1987,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             spaceId = getSpaceIdByNodeId(nodeId);
         }
         if (StrUtil.isBlank(extras)) {
-            extras = baseMapper.selectExtraByNodeId(nodeId);
+            extras = nodeMapper.selectExtraByNodeId(nodeId);
         }
         NodeExtraDTO nodeExtraDTO = JSONUtil.toBean(extras, NodeExtraDTO.class);
-        SocialConnectInfo connectInfo = iSpaceService.getSocialConnectInfo(spaceId);
+        SocialConnectInfo connectInfo = socialServiceFacade.getConnectInfo(spaceId);
         if (connectInfo != null && connectInfo.getAppId() != null) {
             if (connectInfo.isEnabled()) {
-                String suiteKey = iSpaceService.getSocialSuiteKeyByAppId(connectInfo.getAppId());
+                String suiteKey =
+                    socialServiceFacade.getSuiteKeyByDingtalkSuiteId(connectInfo.getAppId());
                 if (suiteKey != null) {
                     extraVo.setDingTalkSuiteKey(suiteKey);
                     extraVo.setDingTalkDaStatus(nodeExtraDTO.getDingTalkDaStatus());
@@ -1912,14 +2058,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public Optional<String> getNodeName(String nodeId, Long userId) {
         // 1. query the space id and node name of the node
-        UrlNodeInfoDTO urlNodeInfo = baseMapper.selectSpaceIdAndNodeNameByNodeId(nodeId);
+        UrlNodeInfoDTO urlNodeInfo = nodeMapper.selectSpaceIdAndNodeNameByNodeId(nodeId);
 
         if (ObjectUtil.isNull(urlNodeInfo)) {
             return Optional.empty();
         }
 
         try {
-            // 2. Query the member id in the space based on the user id.
+            // 2. Query the member Id in the space based on the user id.
             // Gets the member ID by determining whether the user is in this space.
             Long memberId = LoginContext.me().getMemberId(userId, urlNodeInfo.getSpaceId());
             // 3. Query whether the user has permissions on the node in the corresponding space
@@ -1934,7 +2080,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public void checkEnableOperateNodeBySpaceFeature(Long memberId, String spaceId, String nodeId) {
-        Integer nodeType = baseMapper.selectNodeTypeByNodeId(nodeId);
+        Integer nodeType = nodeMapper.selectNodeTypeByNodeId(nodeId);
         // 1. whether the node is the root node
         if (NodeType.toEnum(nodeType) != NodeType.ROOT) {
             return;
@@ -1960,8 +2106,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public boolean isNodeBelongRootFolder(String spaceId, String nodeId) {
-        String rootNodeId = baseMapper.selectRootNodeIdBySpaceId(spaceId);
-        String parentNodeId = baseMapper.selectParentIdByNodeId(nodeId);
+        String rootNodeId = nodeMapper.selectRootNodeIdBySpaceId(spaceId);
+        String parentNodeId = nodeMapper.selectParentIdByNodeId(nodeId);
         return ObjectUtil.isNotNull(rootNodeId) && rootNodeId.equals(parentNodeId);
     }
 
@@ -1969,8 +2115,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     public List<NodeSearchResult> recentList(String spaceId, Long memberId) {
         List<String> nodeIds =
             multiDatasourceAdapterTemplate.getRecentlyVisitNodeIds(memberId, NodeType.FOLDER);
-        List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds).stream()
-            .filter(i -> !i.getNodePrivate()).toList();
+        List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds);
         return formatNodeSearchResults(nodeInfos);
     }
 
@@ -1985,96 +2130,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     @Override
-    public Optional<NodeEntity> findSameNameInSameLevel(String parentNodeId,
-                                                        String nodeName) {
-        List<NodeEntity> nodeEntities = getSubNodeList(parentNodeId);
-        return nodeEntities.stream()
-            .filter(node -> node.getNodeName().equals(nodeName))
-            .findFirst();
-    }
-
-    @Override
-    public void deleteMembersNodes(List<Long> unitIds) {
-        if (unitIds.isEmpty()) {
-            return;
-        }
-        baseMapper.updateIsDeletedByUnitIds(unitIds, true);
-    }
-
-    @Override
-    public void restoreMembersNodes(List<Long> unitIds) {
-        if (unitIds.isEmpty()) {
-            return;
-        }
-        baseMapper.updateIsDeletedByUnitIds(unitIds, false);
-    }
-
-    @Override
-    public Map<Long, Integer> getCountByUnitIds(List<Long> unitIds) {
-        if (unitIds.isEmpty()) {
-            return new HashMap<>(0);
-        }
-        List<NodeStatisticsDTO> privateNodes = baseMapper.selectCountByUnitIds(unitIds);
-        return privateNodes.stream().collect(
-            Collectors.toMap(NodeStatisticsDTO::getUnitId, NodeStatisticsDTO::getNodeCount));
-    }
-
-    @Override
-    public Long getUnitIdByNodeId(String nodeId) {
-        return baseMapper.selectUnitIdByNodeId(nodeId);
-    }
-
-    @Override
-    public boolean nodePrivate(String nodeId) {
-        Long unitId = getUnitIdByNodeId(nodeId);
-        return !unitId.equals(0L);
-    }
-
-    @Override
-    public boolean privateNodeOperation(Long userId, String nodeId) {
-        Long nodeUnit = getUnitIdByNodeId(nodeId);
-        // not private node
-        if (nodeUnit.equals(0L)) {
-            return true;
-        }
-        // check private user equals
-        Long memberId = getMemberIdByUserIdAndNodeId(userId, nodeId);
-        Long unitId = iUnitService.getUnitIdByRefId(memberId);
-        return nodeUnit.equals(unitId);
-    }
-
-    @Override
-    public boolean linkByOutsideWidgets(List<String> nodeIds) {
-        List<String> widgetIds = iWidgetService.getNodeWidgetIds(nodeIds);
-        if (!widgetIds.isEmpty()) {
-            List<String> resourceIds = iWidgetService.getWidgetNodeIds(widgetIds);
-            if (!resourceIds.isEmpty()) {
-                resourceIds = getExistNodeIdsBySelf(resourceIds);
-                return !new HashSet<>(nodeIds).containsAll(resourceIds);
-            }
-        }
-        return false;
-    }
-
-    @Override
-    public void linkByOutsideResource(String nodeId) {
-        List<String> nodeIds = new ArrayList<>();
-        if (nodeId.startsWith(IdRulePrefixEnum.FOD.getIdRulePrefixEnum())) {
-            nodeIds = getNodeIdsInNodeTree(nodeId, -1);
-        }
-        if (nodeId.startsWith(IdRulePrefixEnum.DST.getIdRulePrefixEnum())) {
-            nodeIds.add(nodeId);
-        }
-        if (nodeIds.isEmpty()) {
-            return;
-        }
-        // check mirror
-        ExceptionUtil.isTrue(iNodeRelService.relInTheSameFolder(nodeIds), NODE_LINK_FOREIGN_NODE);
-        // check widgets
-        ExceptionUtil.isFalse(linkByOutsideWidgets(nodeIds), NODE_LINK_FOREIGN_NODE);
-        // check automation
-        ExceptionUtil.isFalse(iAutomationRobotService.linkByOutsideAutomation(nodeIds),
-            NODE_LINK_FOREIGN_NODE);
+    public String getNodeIdByParentIdAndNodeName(String parentNodeId, String nodeName) {
+        return baseMapper.selectNodeIdByParentIdAndNodeName(parentNodeId, nodeName);
     }
 
     private List<NodeSearchResult> formatNodeSearchResults(List<NodeInfoVo> nodeInfoList) {
@@ -2095,31 +2152,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             results.add(result);
         });
         return results;
-    }
-
-    private boolean updateExtra(String nodeId, NodeType nodeType, String oldExtra,
-                                Integer showRecordHistory,
-                                NodeEmbedPageRo embedPage) {
-        if (null == showRecordHistory && null == embedPage) {
-            // dont need to update
-            return true;
-        }
-        Dict extra = Dict.create();
-        // Modify whether to display the history of the record
-        if (ObjectUtil.isNotNull(showRecordHistory) && NodeType.DATASHEET.equals(nodeType)) {
-            extra.set(NodeExtraConstants.SHOW_RECORD_HISTORY, showRecordHistory);
-        }
-        // embed page info
-        if (ObjectUtil.isNotNull(embedPage) && NodeType.CUSTOM_PAGE.equals(nodeType)) {
-            extra.set(NodeExtraConstants.EMBED_PAGE, embedPage);
-        }
-        if (null == oldExtra) {
-            return SqlHelper.retBool(
-                baseMapper.insertExtraByNodeId(nodeId, JSONUtil.toJsonStr(extra)));
-        } else {
-            return SqlHelper.retBool(
-                baseMapper.updateExtraByNodeId(nodeId, JSONUtil.toJsonStr(extra)));
-        }
     }
 
 }
